fix overflow and update project

--- a/app/overlay.css
+++ b/app/overlay.css
@@ -37,13 +37,13 @@
   }
 }
 
-.preloader-container {
+/* .preloader-container {
   position: fixed;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
-}
+} */
 
 .cssload-loader {
   position: absolute;
